# mutatea

./: .gitignore  08.26_iVar_splitgff.sh  08.27_multiple_pool_loop.sh  08.29_flu_metadata.Rmd  08.29_mergedbam_varmint.sh  08.29_multiple_pool_loop_mergedbam.sh  09.04_mergedbam_novarm.sh  09.04_multiple_pool_loop_varmint.sh  09.04_varmint.sh  09.05_clinical_flu_metadata.Rmd  09.09_my_mergedbam.sh  09.09_my_varmint.sh  H1N1_clinical.fasta  H1N1_clinical_md.csv  LICENSE  README.md  align_called_h1n1_reads_pools.sh  align_wastewater_reads.py  bam_merger.sh  cli_funcs.py  extract_covid_reads_from_demix.py  fasta_splitter.sh  flu_cli.py  geojson_visualization.py  gff_gene_subsetter.sh  gff_splitter.sh  lofreq_h1n1_align.sh  metadata_funcs.py  mutatea.py  mutatea.txt  mutatea.yaml  mutatea_covid.py  mutatea_covid_funcs.py  mutatea_funcs.py  old_h1n1_align.sh  old_iVar_align.sh  pyproject.toml  pythontest.py  rename_ecoli_samples.py  submit_flu_cli.sh  (+5 more)
python_CLI/: 01.metadata_processing.py  01.ww_metadata_processing.py  02.clin_metadata_processing.py  NCBI_clin_query.py  README.md  __init__.py  executable_metadata.sh  flu_cli.py  flu_mutational_analysis.py  metadata_funcs.py  metadata_processing.py  pyproject.toml  test.ipynb
python_CLI/H1N1_align/clinical_output/monthly_fasta/: 04.2024.fasta  05.2025.fasta  09.2024.fasta  12.2024.fasta
python_CLI/H1N1_align/clinical_output/monthly_lists/: 01.2023_list.txt  02.2025_list.txt  07.2024_list.txt  10.2023_list.txt  11.2023_list.txt  12.2022_list.txt
python_CLI/H1N1_align/metadata_files/: metadata_clinical_H1N1.csv  metadata_clinical_H1N1.tsv  metadata_wastewater_combined.csv
python_CLI/H1N1_align/reference_files/: GCA_039308895.1_ASM3930889v1_genomic.fna
python_CLI/H3N2_align/clinical_output/monthly_fasta/: 01.2023.fasta  01.2024.fasta  01.2025.fasta  02.2024.fasta  02.2025.fasta  03.2023.fasta  03.2024.fasta  03.2025.fasta  04.2024.fasta  04.2025.fasta  05.2022.fasta  05.2024.fasta  05.2025.fasta  06.2022.fasta  07.2022.fasta  07.2024.fasta  08.2024.fasta  09.2023.fasta  10.2022.fasta  10.2023.fasta  10.2024.fasta  11.2022.fasta  11.2023.fasta  11.2024.fasta  (+2 more)
python_CLI/H3N2_align/metadata_files/: metadata_clinical_H3N2.tsv
python_CLI/H5N1_align/metadata_files/: metadata_clinical_H5N1.tsv
python_CLI/H5N1_align/reference_files/: GCA_039465435.1_ASM3946543v1_genomic.fna
python_CLI/flu_CLI.egg-info/: entry_points.txt
python_CLI/metadata/: p1834_metadata.xlsx  p1856_metadata.xlsx  p1866_metadata.xlsx  p1898_metadata .xlsx  p1932_metadata.xlsx  p1939_metadata.xlsx  p1957_metadata.xlsx  p1971_metadata.xlsx  p2002_metadata.xlsx  p2033_metadata.xlsx
python_CLI/test_input_data/clinical_input_data_H3N2/: GCA_039301835.1_ASM3930183v1_genomic.fna  sequences.csv
python_CLI/test_input_data/clinical_input_data_H5N1/: sequences.fasta
python_CLI/test_input_data/test_input_data_H1N1/: sequences.csv  sequences.fasta
python_CLI/test_input_data/test_input_data_H5N1/: sequences.csv
python_CLI/test_input_data_H5N1/: GCA_039465435.1_ASM3946543v1_genomic.gff
python_CLI/wastewater_metadata/: p1552_metadata.xlsx  p1585_metadata.xlsx  p1600_metadata.xlsx  p1616_metadata.xlsx  p1647_metadata.xlsx  p1826_metadata.xlsx  p1838_metadata.xlsx  p1854_metadata.xlsx  p1865_metadata.xlsx  p1881_metadata.xlsx  p1883_metadata.xlsx  p1887_metadata.xlsx  p1891_metadata.xlsx  p1893_metadata.xlsx  p1895_metadata.xlsx  p1911_metadata.xlsx  p1925_metadata.xlsx  p1927_metadata.xlsx  p1931_metadata.xlsx  p1944_metadata.xlsx  p1947_metadata.xlsx  p1950_metadata.xlsx  p1962_metadata.xlsx  p1970_metadata.xlsx  p1973_metadata.xlsx  p1976_metadata.xlsx  p1987_metadata.xlsx  p1993_metadata.xlsx  p2012_metadata.xlsx  p2026_metadata.xlsx  p2036_metadata.xlsx
(+141 files in other folders)
