[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flu_CLI"
version = "0.0.1"
authors = [
  { name="Camille R. Mazurek", email="camillemazurek23@gmail.com" },
]
# crm: need to update description of this package
description = "A framework comparing the mutational spectra of virome sequencing data between sources/cohorts."
readme = "README.md"
requires-python = ">=3.9"

# CRM: I do not have a license rn
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "biopython",
    "openpyxl",
    "polars",
    "pysam"
]

[tool.setuptools]
py-modules = ["flu_cli", "cli_funcs"]

[project.scripts]  
flu_CLI = "flu_cli:flu_cli"

[project.urls]
"Homepage" = "https://github.com/tiszalab/flu_mutatome_pipelines/python_CLI"