[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutatea"
version = "0.0.1"
authors = [
  { name="Camille R. Mazurek", email="camillemazurek23@gmail.com" },
]
# crm: need to update description of this package
description = "A framework comparing the mutational spectra of virome sequencing data between sources/cohorts."
readme = "README.md"
requires-python = ">=3.9"

# CRM: I do not have a license rn
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "biopython",
    "openpyxl",
    "polars",
    "pysam",
    "varmint @ git+https://github.com/tiszalab/varmint.git"
    ]

[tool.setuptools]
py-modules = ["mutatea", "mutatea_funcs"]

[project.scripts]  
mutatea = "mutatea:mutatea"

[project.urls]
"Homepage" = "https://github.com/tiszalab/flu_mutatome_pipelines/mutatea"